@@ -1,3 +1,13 @@
+1998-09-23  Kimball Thurston <kimball@sgrail.com>
+
+	* clients.c - Make sure that the socket when connected is marked
+	  as non-blocking
+
+	* audio_irix.c - Fix to reset the output rate every time a sample
+	  is played, so other utilities that play sounds and rudely
+	  change the output rate on SGI systems can't mess with esd too
+	  much
+
 1998-09-22  Yo Ric Dude  <ericmit@ix.netcom.com>
 
 	* AUTHORS, TODO: updates/formatting
